--- a/config_sample.env
+++ b/config_sample.env
@@ -1,88 +1,146 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "5656671332:AAHoek4Envt5_fbmOnBs1PMrBHg-DE_bZao"
+GDRIVE_FOLDER_ID = "0AAp5rq4hFBNCUk9PVA"
+OWNER_ID =1544135786
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
-TELEGRAM_API =
-TELEGRAM_HASH = ""
-# OPTIONAL CONFIG
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1
-IS_TEAM_DRIVE = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API =13449917
+TELEGRAM_HASH = "844669bea1de128fa36f383ac79d344d"
+# OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
+AUTHORIZED_CHATS = "-1001588850914"
+SUDO_USERS = "253083550"
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://hz.hasanfrr.workers.dev/0:"
 STATUS_LIMIT = ""
-STOP_DUPLICATE = ""
+STOP_DUPLICATE = "True"
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
-EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
-# Mirror
-MIRROR_LOGS = ""
-BOT_PM = ""
-FORCE_BOT_PM = ""
-# Leech
-LEECH_LOG = ""
-USER_SESSION_STRING = ""
-LEECH_SPLIT_SIZE = ""
-AS_DOCUMENT = ""
-EQUAL_SPLITS = ""
-CUSTOM_FILENAME = ""
+EXTENTION_FILTER = ""
+INCOMPLETE_TASK_NOTIFIER = "True"
 # Update
 UPSTREAM_REPO = ""
 UPSTREAM_BRANCH = ""
-# qBittorrent/Aria2c
+# Mirror
+MIRROR_LOGS = ""
+# Leech
+BOT_PM = ""
+LEECH_LOG = ""
+TG_SPLIT_SIZE = ""
+AS_DOCUMENT = ""
+EQUAL_SPLITS = ""
+CUSTOM_FILENAME = "True"
+#Telegraph ui
+TITLE_NAME = "Hz-Cloud-Zone"
+AUTHOR_NAME = "@HzHasan"
+AUTHOR_URL = "https://t.me/HzHasan"
+GD_INFO = "Uploaded by Hz Hasan"
+# qBittorrent
 BASE_URL_OF_BOT = ""
 SERVER_PORT = ""
 WEB_PINCODE = ""
+QB_SEED = ""
 # RSS
 RSS_DELAY = ""
 RSS_COMMAND = ""
 RSS_CHAT_ID = ""
-RSS_USER_SESSION_STRING = ""
+USER_SESSION_STRING = ""
 # Private Files
-ACCOUNTS_ZIP_URL = ""
-TOKEN_PICKLE_URL = ""
+ACCOUNTS_ZIP_URL = "https://drive.google.com/uc?export=download&id=1BwJFnKD3oq7SCtd4iOI569wZs2kyrTPd"
+TOKEN_PICKLE_URL = "https://drive.google.com/uc?export=download&id=1Clwd3PFueFVC5R12MzkK2wIKPlF-BMlB"
 MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
+# Heroku
+HEROKU_API_KEY = ""
+HEROKU_APP_NAME = ""
 # Mega
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
-# Gdtot
-CRYPT = ""
+MEGAREST = ""
+MEGA_API_KEY = "DiIgFSiA"
+MEGA_EMAIL_ID = "hzhasanfr.r@gmail.com"
+MEGA_PASSWORD = "HzCloudZone"
+# Shortener
+SHORTENER = ""
+SHORTENER_API = ""
+# GDTOT COOKIE
+PHPSESSID = "c3dgh9lr9njco8s3ce0toha7re"
+CRYPT = "a05Nem54UkxyV0Z4ZXJkRWF4c3lBUDlVZjZFbUY3WWZWQ3h1WDNFVjR6TT0%3D"
 # Appdrive
-APPDRIVE_EMAIL = ""
-APPDRIVE_PASS = ""
+APPDRIVE_EMAIL = "hzhasanfrr@gmail.com"
+APPDRIVE_PASS = "CloudZone"
 # Size Limits
 TORRENT_DIRECT_LIMIT = ""
 ZIP_UNZIP_LIMIT = ""
 CLONE_LIMIT = ""
 MEGA_LIMIT = ""
 STORAGE_THRESHOLD = ""
-# Telegraph ui
-TITLE_NAME = "Helios-Mirror-Search"
-AUTHOR_NAME = "Helios-mirror"
-AUTHOR_URL = "https://t.me/heliosmirror"
 # Buttons
-VIEW_LINK = ""
+VIEW_LINK = "True"
 SOURCE_LINK = ""
-START_BTN1_NAME = ""
-START_BTN1_URL = ""
-START_BTN2_NAME = ""
-START_BTN2_URL = ""
+BUTTON_FOUR_NAME = "👤 Owner"
+BUTTON_FOUR_URL = "https://t.me/HzHasan"
+BUTTON_FIVE_NAME = ""
+BUTTON_FIVE_URL = ""
+BUTTON_SIX_NAME = ""
+BUTTON_SIX_URL = ""
 # Torrent Search
 SEARCH_API_LINK = ""
 SEARCH_LIMIT = ""
+#bot commands
+#Mirror Related Commands
+START_COMMAND = ""    #Default is "start"
+MIRROR_COMMAND = ""     #Default is "mirror"
+ZIP_COMMAND = ""        #Default is "zipmirror"
+UNZIP_COMMAND = ""      #Default is "unzipmirror"
+CANCEL_COMMAND = ""     #Default is "cancel"
+LIST_COMMAND = ""       #Default is "list"
+SEARCH_COMMAND = ""     #Default is "search"
+STATUS_COMMAND = ""     #Default is "status"
+STATS_COMMAND = ""      #Default is "stats"
+HELP_COMMAND = ""       #Default is "help"
+CLONE_COMMAND = ""      #Default is "clone"
+COUNT_COMMAND = ""      #Default is "count"
+WATCH_COMMAND = ""      #Default is "watch"
+ZIPWATCH_COMMAND = ""   #Default is "zipwatch"
+QBMIRROR_COMMAND = ""   #Default is "qbmirror"
+QBZIP_COMMAND = ""      #Default is "qbzipmirror"
+QBUNZIP_COMMAND = ""    #Default is "qbunzipmirror"
+
+#Leech Related Commands
+LEECH_COMMAND = ""      #Default is "leech"
+LEECHSET_COMMAND = ""   #Default is "leechset"
+SETTHUMB_COMMAND = ""   #Default is "setthumb"
+UNZIPLEECH_COMMAND = "" #Default is "unzipleech"
+ZIPLEECH_COMMAND = ""   #Default is "zipleech"
+QBLEECH_COMMAND = ""    #Default is "qbleech"
+QBUNZIPLEECH_COMMAND = "" #Default is "qbunzipleech"
+QBZIPLEECH_COMMAND = ""    #Default is "qbzipleech"
+LEECHWATCH_COMMAND = ""    #Default is "leechwatch"
+LEECHZIPWATCH_COMMAND = "" #Default is "leechzipwatch"
+
+#SUDO Commands
+AUTH_COMMAND = ""       #Default is "authorize"
+UNAUTH_COMMAND = ""     #Default is "unauthorize"
+ADDSUDO_COMMAND = ""    #Default is "addsudo"
+RMSUDO_COMMAND = ""     #Default is "rmsudo"
+RESTART_COMMAND = ""    #Default is "restart"
+SPEED_COMMAND = ""      #Default is "speedtest"
+USERS_COMMAND = ""      #Default is "users"
+CANCEL_ALL_COMMAND = "" #Default is  "cancelall
+LOG_COMMAND = ""        #Default is "log"
+DELETE_COMMAND = ""     #Default is "del"
+RSSLIST_COMMAND = ""
+RSSGET_COMMAND = ""
+RSSSUB_COMMAND = ""
+RSSUNSUB_COMMAND = ""
+RSSSET_COMMAND = ""
+ADDLEECHLOG_COMMAND = ""
+RMLEECHLOG_COMMAND = ""
 SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/rarbg.py",
                    "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/piratebay.py",
                    "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/legittorrents.py",
@@ -99,45 +157,3 @@ SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins
                    "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/thepiratebay.py",
                    "https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/magnetdl.py",
                    "https://raw.githubusercontent.com/khensolomon/leyts/master/yts.py"]'
-# Custom bot commands
-# Mirror Related Commands
-START_CMD = ""    #Default is "start"
-MIRROR_CMD = ""     #Default is "mirror"
-ZIP_CMD = ""        #Default is "zipmirror"
-UNZIP_CMD = ""      #Default is "unzipmirror"
-CANCEL_CMD = ""     #Default is "cancel"
-LIST_CMD = ""       #Default is "list"
-SEARCH_CMD = ""     #Default is "search"
-STATUS_CMD = ""     #Default is "status"
-STATS_CMD = ""      #Default is "stats"
-HELP_CMD = ""       #Default is "help"
-CLONE_CMD = ""      #Default is "clone"
-COUNT_CMD = ""      #Default is "count"
-YTDL_CMD = ""      #Default is "ytdl"
-YTDLZIP_CMD = ""   #Default is "ytdlzip"
-QBMIRROR_CMD = ""   #Default is "qbmirror"
-QBZIP_CMD = ""      #Default is "qbzipmirror"
-QBUNZIP_CMD = ""    #Default is "qbunzipmirror"
-
-#Leech Related CMDs
-LEECH_CMD = ""      #Default is "leech"
-LEECHSET_CMD = ""   #Default is "leechset"
-SETTHUMB_CMD = ""   #Default is "setthumb"
-UNZIPLEECH_CMD = "" #Default is "unzipleech"
-ZIPLEECH_CMD = ""   #Default is "zipleech"
-QBLEECH_CMD = ""    #Default is "qbleech"
-QBUNZIPLEECH_CMD = "" #Default is "qbunzipleech"
-QBZIPLEECH_CMD = ""    #Default is "qbzipleech"
-YTDLLEECH_CMD = ""    #Default is "ytdlleech"
-YTDLZIPLEECH_CMD = "" #Default is "ytdlzipleech"
-CANCEL_ALL_CMD = "" #Default is  "cancelall
-DELETE_CMD = ""     #Default is "del"
-
-# RSS Realted Commands
-RSSLIST_CMD = ""
-RSSGET_CMD = ""
-RSSSUB_CMD = ""
-RSSUNSUB_CMD = ""
-RSSSET_CMD = ""
-ADDLEECHLOG_CMD = ""
-RMLEECHLOG_CMD = ""
